# BB

./: Dockerfile  README.md  pyproject.toml
backend/core/apps/config/: di.py  settings.py
backend/core/apps/domain/entities/: event.py  session.py
backend/core/apps/domain/value_objects/: ids.py
backend/core/apps/entrypoints/: polling.py
backend/core/apps/infrastructure/llm/: gemini_client.py
backend/core/apps/infrastructure/persistence/: memory_session.py  sqlite_events.py  sqlite_members.py  sqlite_regs.py  sqlite_reminders.py  sqlite_session.py
backend/core/apps/infrastructure/scheduler/: aps.py
backend/core/apps/interfaces/ports/: clock.py  event_repo.py  llm_gateway.py  member_repo.py  registration_repo.py  reminder_msg_repo.py  scheduler.py  session_repo.py
backend/core/apps/presentation/telegram/presenters/: event_card.py
backend/core/apps/presentation/telegram/routers/: chat.py  dm_start.py  events.py  events_wizard.py  help.py  reset.py
backend/core/apps/presentation/telegram/widgets/: calendar.py
backend/core/apps/use_cases/: close_event.py  expire_event.py  generate_reply.py  post_daily_digest.py  publish_event.py  register_for_event.py  reset_session.py  send_event_reminder.py
deploy/: .local.env  local.compose.yml  prod.compose.yml
